@@ -1,4 +1,4 @@
-rev 13-Dec_10-13_23
+rev 13-Dec_15-14_29
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -304,3 +304,6 @@ Fixed corrupted tables with vertical spans in across from  empty cells (on initi
 
 10 Dec
 Removed unintentional _FCKG_BLANK_TD_markers
+
+15 Dec
+Remove ~~COMPLEX_TABLES~~ macro in save.php and disable macro checkbox if complex set in config manager
